字段修改回调和 读取 整个form 表单值

--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -12,6 +12,7 @@
 .checkbox-waper,
 .checkbox-label-waper {
   display: inline-block;
+  white-space: nowrap;
 }
 .checkbox-list {
   display: flex;
