--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -28,3 +28,35 @@
   display: flex;
   flex-direction: row;
 }
+
+.panel {
+  border: solid 1px #cbcbcb;
+  border-radius: 2px;
+}
+
+.panel-header {
+  height: 35px;
+  line-height: 35px;
+  width: 100%;
+  font-size: 12px;
+  border-bottom: solid 1px #cbcbcb;
+  background-color: #fafafa;
+  cursor: pointer;
+}
+.panel-header span {
+  margin-left: 10px;
+}
+.panel-header svg {
+  width: 12px;
+  height: 12px;
+  margin-left: 10px;
+  transition: all 0.3s;
+}
+.panel-body {
+  border-top: none;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+.panel-body-content {
+  padding: 10px;
+}
