--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -1,5 +1,6 @@
 .text-waper {
   width: 100%;
+  padding: 3px;
   display: flex;
   flex-direction: row;
 }
@@ -19,8 +20,9 @@
 }
 
 .colorbox {
-  width: 30px;
+  width: 20px;
   height: 30px;
+  border: solid 1px #cbcbcb;
   border-radius: 50%;
 }
 
