--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -18,7 +18,71 @@
 .checkbox-list {
   display: flex;
 }
+.color-bord {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border: solid 1px #cbcbcb;
+  border-radius: 3px 0 0 3px;
+}
+.color-bord::after,
+.color-bord::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
+.color-bord::before {
+  background: linear-gradient(to right, white, transparent);
+}
+
+.color-bord::after {
+  background: linear-gradient(to top, black, transparent);
+}
+
+.color-bar {
+  width: 15px;
+  height: 100px;
+  border: solid 1px #cbcbcb;
+  border-left: none;
+  border-radius: 0 3px 3px 0;
+  background: linear-gradient(to top, #f00 0%, #ff0 16.66%, #0f0 33.33%, #0ff 50%, #00f 66.66%, #f0f 83.33%, #f00 100%);
+}
+.color-bar-porint {
+  width: 15px;
+  height: 3px;
+  border-top: solid 1px #fff;
+  border-bottom: solid 1px #fff;
+  background-color: #fff;
+  opacity: 0.8;
+  position: relative;
+}
+.color-point {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  z-index: 1;
+}
+#color-input {
+  width: 70px;
+}
+.color-ok {
+  width: 35px;
+  height: 20px;
+  border: solid 1px #cbcbcb;
+  border-radius: 3px;
+  background: #193964;
+  color: #fff;
+  text-align: center;
+  margin: 2px 0 0 2px;
+  line-height: 20px;
+  cursor: pointer;
+}
 .colorbox {
   width: 20px;
   height: 20px;
@@ -29,8 +93,11 @@
 .color-list {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
-
+.color-list .text-waper {
+  width: auto;
+}
 .panel {
   border: solid 1px #cbcbcb;
   border-radius: 2px;
