--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -8,6 +8,7 @@
   text-align: right;
   padding-right: 5px;
   font-size: 12px;
+  line-height: 22px;
 }
 
 .checkbox-waper,
@@ -115,7 +116,6 @@
 .panel {
   border: solid 1px #cbcbcb;
   border-radius: 2px;
-  margin-top: 5px;
 }
 
 .panel-header {
