--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -142,7 +142,7 @@
   transition: all 0.3s;
 }
 .panel-body-content {
-  padding: 10px;
+  padding: 10px 10px 20px 10px;
   position: relative;
 }
 
