取色器 高度和偏移距离调整

--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -173,7 +173,7 @@
 .defaultcolor-list {
   position: absolute;
   width: 190px;
-  background-color: #f3f3f3;
+  background-color: #efd1d1;
   border-radius: 2px;
 }
 
