--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -269,3 +269,104 @@
   cursor: pointer;
   font-size: 12px;
 }
+
+/*jsonform 控件样式*/
+.jsonform-textbox {
+  border: 1px solid #d9d9d9;
+  font-size: 12px;
+  padding: 4px 11px;
+  background-color: #fff;
+  border-radius: 2px;
+  width: calc(100% - 22px);
+}
+.jsonform-textbox:active,
+.jsonform-textbox:focus {
+  border: solid 1px #40a9ff;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+}
+
+.jsonform-switch:active,
+.jsonform-switch:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+  box-shadow: 0 0 0 2px rgba(24, 144, 255, 0.2);
+}
+.jsonform-textbox:hover {
+  border: solid 1px #40a9ff;
+}
+
+.jsonform-switch {
+  min-width: 28px;
+  height: 16px;
+  line-height: 16px;
+  background-color: rgba(0, 0, 0, 0.25);
+  border: 0;
+  border-radius: 100px;
+  cursor: pointer;
+  vertical-align: middle;
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+}
+
+.jsonform-switch-handle {
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.jsonform-switch-handle::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  border-radius: 9px;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 35, 11, 0.2);
+  box-shadow: 0 2px 4px 0 rgba(0, 35, 11, 0.2);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  content: '';
+}
+.jsonform-switch-checked {
+  background-color: #1890ff;
+}
+.jsonform-switch-checked .jsonform-switch-handle {
+  left: calc(100% - 12px - 2px);
+}
+.jsonform-theme-waper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.jsonform-theme {
+  width: 110px;
+  height: 25px;
+  line-height: 25px;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-left: 10px;
+  border: 1px solid #d9d9d9;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 3px;
+}
+.jsonform-theme:hover {
+  border-color: #1890ff;
+}
+.jsonform-theme-checked {
+  border-color: #1890ff;
+}
+.jsonform-theme-color {
+  width: 15px;
+  height: 15px;
+}
+/*jsonform 控件样式*/
