--- a/packages/sharewinfo-ui/style.css
+++ b/packages/sharewinfo-ui/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .text-waper {
   padding: 3px;
   display: flex;
@@ -368,5 +372,64 @@
 .jsonform-theme-color {
   width: 12px;
   height: 12px;
+}
+.select-box {
+  width: calc(100% - 2px);
+  height: 24px;
+  border: 1px solid #d9d9d9;
+  border-radius: 3px;
+  position: relative;
+  font-size: 14px;
+}
+
+.select-box:hover {
+  border: solid 1px #40a9ff;
+}
+
+ul li {
+  list-style: none;
+}
+.select-box p {
+  width: calc(100% - 2px);
+  height: 24px;
+  white-space: nowrap;
+  line-height: 24px;
+  padding-left: 10px;
+  padding-right: 30px;
+  cursor: pointer;
+}
+.select-box ul {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
+  width: calc(100% - 2px);
+  margin-top: 2px;
+  position: absolute;
+  border-radius: 3px;
+  cursor: pointer;
+  display: none;
+  transition: all 0.3s;
+  z-index: 999;
+}
+.select-box ul li {
+  height: 24px;
+  white-space: nowrap;
+  line-height: 24px;
+  text-indent: 10px;
+}
+.select-box ul li:hover {
+  background-color: #e6f7ff;
+}
+
+.select-box span {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  color: rgba(0, 0, 0, 0.25);
+  font-size: 12px;
+  margin-top: -8px;
+}
+
+.select-box svg {
+  transition: all 0.3s;
 }
 /*jsonform 控件样式*/
